seichi-onp-k8s/manifests/seichi-kubernetes/apps/seichi-minecraft/seichi-portal-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: seichi-minecraft
  name: seichi-portal-backend
spec:
  type: ClusterIP
  ports:
    - name: seichi-portal-backend-web
      port: 80
      protocol: TCP
      targetPort: 9000
  selector:
    app: seichi-portal-backend
